--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -9,121 +9,8 @@ trigger:
       - docs/*
 
 variables:
-  BUILD_NUMBER: 0.1.$(Build.BuildId)
-  REACT_APP_BUILD_NUMBER: 0.1.$(Build.BuildId)
-  solution: 'webapi/MccSoft.TemplateApp.sln'
-  project: 'webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj'
+  - template: ./_settings/ci-default.yml
+  - template: ./_settings/ci-override.yml
 
-stages:
-  - stage: Build
-    dependsOn: []
-    jobs:
-      - job: Build_Backend_Frontend
-        pool:
-          vmImage: 'ubuntu-latest'
-        steps:
-          - checkout: self
-            fetchDepth: 1
-            submodules: true
-
-          - template: ./shared/cache-node-modules.yml
-          - template: ./shared/azure-pipelines-build.yml
-          - template: ./shared/azure-pipelines-docker.yml
-
-  - stage: Test
-    dependsOn: []
-    jobs:
-      - job: Test
-        pool:
-          vmImage: 'ubuntu-latest'
-        steps:
-          - checkout: self
-            fetchDepth: 1
-            submodules: true
-          - template: ./shared/cache-node-modules.yml
-          - template: ./shared/azure-pipelines-tests.yml
-
-  - stage: StorybookTest
-    dependsOn: []
-    jobs:
-      - job: StorybookTest
-        pool:
-          vmImage: 'ubuntu-latest'
-        container: mcr.microsoft.com/playwright:v1.30.0-focal
-        steps:
-          - template: ./tests/playwright-tests.yml
-
-  - stage: DockerTagLatest
-    dependsOn:
-      - Build
-      - Test
-      - StorybookTest
-    condition: succeeded()
-    jobs:
-      - job: DockerTagLatest
-        pool:
-          vmImage: 'ubuntu-latest'
-        steps:
-          - template: ./shared/docker-add-tag-latest.yml
-
-  - stage: DeployToDev
-    dependsOn:
-      - Build
-      - DockerTagLatest
-    condition: succeeded()
-    jobs:
-      - deployment:
-        environment:
-          name: 'DEV'
-          resourceType: VirtualMachine
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - template: ./azure-deploy-template.yml
-
-  - stage: TagDevSources
-    dependsOn: DeployToDev
-    condition: succeeded()
-    jobs:
-      - job:
-        condition: succeeded()
-        pool:
-          vmImage: ubuntu-latest
-        steps:
-          - checkout: self
-            persistCredentials: true
-          - script: |
-              git tag 'dev' -f
-              git push origin 'dev' -f --tags
-
-  - stage: DeployToProd
-    dependsOn:
-      - Build
-      - DockerTagLatest
-    condition: succeeded()
-    jobs:
-      - deployment:
-        environment:
-          name: 'PROD'
-          resourceType: VirtualMachine
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - template: ./azure-deploy-template.yml
-
-  - stage: TagProdSources
-    dependsOn: DeployToProd
-    condition: succeeded()
-    jobs:
-      - job:
-        condition: succeeded()
-        pool:
-          vmImage: ubuntu-latest
-        steps:
-          - checkout: self
-            persistCredentials: true
-          - script: |
-              git tag 'prod' -f
-              git push origin 'prod' -f --tags
+extends:
+  template: azure-pipelines-template.yml
