--- a/.ci/_settings/ci.partial.yml
+++ b/.ci/_settings/ci.partial.yml
@@ -1,2 +1,6 @@
+# ------------------------------------
+# This file configures parameters for CI builds on the main branch.
+# Here you can override values defined in 'ci.yml'.
+# ------------------------------------
 variables:
   DUMMY: 1
