--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -1,7 +1,7 @@
 # ------------------------------------
 # This is the base file that is used in all pipelines
 # Please, DO NOT CHANGE it
-# Change 'ci-variables.yml' instead
+# Change 'base.partial.yml' instead
 # ------------------------------------
 variables:
   DUMMY: 1
