--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -5,3 +5,15 @@
 # ------------------------------------
 variables:
   DUMMY: 1
+  # # Storybook
+  # ENABLE_STORYBOOK: true
+  # RUN_STORYBOOK_TESTS_AFTER_BUILD: false
+  # RUN_STORYBOOK_TESTS_PARALLEL_BUILD: true
+  # # -----------
+
+  # # Deployment
+  # ENABLE_DEPLOY: true
+  # DEPLOY_TAG: latest
+  # ENABLE_TAG_SOURCES: true
+  # DEPLOY_IF_STORYBOOK_FAILS: false
+  # # -----------
