--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -18,6 +18,6 @@ variables:
   # Deployment
   ENABLE_DEPLOY: true
   DEPLOY_TAG: latest
-  ENABLE_TAG_SOURCES: true
+  ENABLE_TAG_SOURCES: false
   DEPLOY_IF_STORYBOOK_FAILS: false
   # -----------
