--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -5,6 +5,12 @@
 # ------------------------------------
 variables:
   DUMMY: 1
+
+  # # General
+  # DISABLE_BUILD: false
+  # DISABLE_TESTS: false
+  # # -----------
+
   # # Storybook
   # ENABLE_STORYBOOK: true
   # RUN_STORYBOOK_TESTS_AFTER_BUILD: false
